# py_workdays_rs

./: .gitignore  Cargo.toml  google_colab_setup.sh  mypy.ini  pyproject.toml  readme.md  requirements.txt  setup.py
py_workdays/: __init__.py  config.py  extract.py  intraday.py  option.py  py_workdays.cp39-win_amd64.pyd  py_workdays.pyi  workdays.py
py_workdays/.ipynb_checkpoints/: option-checkpoint.ipynb
py_workdays/rs_workdays/: Cargo.toml
py_workdays/rs_workdays/src/: extract.rs  global.rs  intraday.rs  lib.rs  workdays.rs
py_workdays/scraping/: __init__.py  csv_api_scraping.py
src/: convert.rs  error.rs  lib.rs
test/: .gitignore  test_base.py
