[package]
name = "py_workdays"
version = "0.1.0"
authors = ["deepgreenAN <asami73dgreen63@gmail.com>"]
edition = "2018"


[lib]
name = "py_workdays"
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
rs_workdays = {git = "https://github.com/deepgreenAN/rs_workdays.git"}
numpy = "0.15"
num-traits = "0.2"
thiserror = "1.0.0"
anyhow = "1.0.51"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]


