[tool.poetry]
name = "py_workdays_rs"
version = "0.1.0"
description = ""
authors = ["deepgreenAN <asami73dgreen63@gmail.com>"]
include = ["py_workdays/**/*.pyd"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
pytz = "^2021.3"
py-strict-list = {git = "https://github.com/deepgreenAN/py_strict_list.git"}

[tool.poetry.dev-dependencies]
maturin = "^0.12.4"
pytest = "^6.2.5"
jupyterlab = "^3.2.4"
nptyping = "^1.4.4"
mypy = "^0.910"
matplotlib = "^3.5.0"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"
# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
